; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched_rt.c_enqueue_task_rt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched_rt.c_enqueue_task_rt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rq = type { i32 }
%struct.task_struct = type { %struct.sched_rt_entity }
%struct.sched_rt_entity = type { i32, i64 }

@ENQUEUE_WAKEUP = common dso_local global i32 0, align 4
@ENQUEUE_HEAD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rq*, %struct.task_struct*, i32)* @enqueue_task_rt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enqueue_task_rt(%struct.rq* %0, %struct.task_struct* %1, i32 %2) #0 {
  %4 = alloca %struct.rq*, align 8
  %5 = alloca %struct.task_struct*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.sched_rt_entity*, align 8
  store %struct.rq* %0, %struct.rq** %4, align 8
  store %struct.task_struct* %1, %struct.task_struct** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %9 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %8, i32 0, i32 0
  store %struct.sched_rt_entity* %9, %struct.sched_rt_entity** %7, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @ENQUEUE_WAKEUP, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load %struct.sched_rt_entity*, %struct.sched_rt_entity** %7, align 8
  %16 = getelementptr inbounds %struct.sched_rt_entity, %struct.sched_rt_entity* %15, i32 0, i32 1
  store i64 0, i64* %16, align 8
  br label %17

17:                                               ; preds = %14, %3
  %18 = load %struct.sched_rt_entity*, %struct.sched_rt_entity** %7, align 8
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* @ENQUEUE_HEAD, align 4
  %21 = and i32 %19, %20
  %22 = call i32 @enqueue_rt_entity(%struct.sched_rt_entity* %18, i32 %21)
  %23 = load %struct.rq*, %struct.rq** %4, align 8
  %24 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %25 = call i32 @task_current(%struct.rq* %23, %struct.task_struct* %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %37, label %27

27:                                               ; preds = %17
  %28 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %29 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.sched_rt_entity, %struct.sched_rt_entity* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = icmp sgt i32 %31, 1
  br i1 %32, label %33, label %37

33:                                               ; preds = %27
  %34 = load %struct.rq*, %struct.rq** %4, align 8
  %35 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %36 = call i32 @enqueue_pushable_task(%struct.rq* %34, %struct.task_struct* %35)
  br label %37

37:                                               ; preds = %33, %27, %17
  %38 = load %struct.rq*, %struct.rq** %4, align 8
  %39 = call i32 @inc_nr_running(%struct.rq* %38)
  ret void
}

declare dso_local i32 @enqueue_rt_entity(%struct.sched_rt_entity*, i32) #1

declare dso_local i32 @task_current(%struct.rq*, %struct.task_struct*) #1

declare dso_local i32 @enqueue_pushable_task(%struct.rq*, %struct.task_struct*) #1

declare dso_local i32 @inc_nr_running(%struct.rq*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
